--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
+        "php": "^8",
         "klc/data-chain": "^1.0",
         "illuminate/console": "^9.0",
         "illuminate/filesystem": "^9.0",
