--- a/composer.json
+++ b/composer.json
@@ -9,16 +9,17 @@
             "email": "m_kilic@outlook.com.tr"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
+    "prefer-stable": true,
     "require": {
         "php": "^8",
         "klc/data-chain": "^1.0",
-        "illuminate/console": "^10.0",
-        "illuminate/filesystem": "^10.0",
-        "illuminate/support": "^10.0",
-        "illuminate/database": "^10.0",
-        "illuminate/redis": "^10.0",
-        "illuminate/config": "^10.0"
+        "illuminate/console": "^10.0|^11.0|^12.0",
+        "illuminate/filesystem": "^10.0^11.0|^12.0",
+        "illuminate/support": "^10.0^11.0|^12.0",
+        "illuminate/database": "^10.0^11.0|^12.0",
+        "illuminate/redis": "^10.0^11.0|^12.0",
+        "illuminate/config": "^10.0^11.0|^12.0"
     },
     "autoload": {
         "psr-4": {
