--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,11 @@
         "php": "^8",
         "klc/data-chain": "^1.0",
         "illuminate/console": "^10.0|^11.0|^12.0",
-        "illuminate/filesystem": "^10.0^11.0|^12.0",
-        "illuminate/support": "^10.0^11.0|^12.0",
-        "illuminate/database": "^10.0^11.0|^12.0",
-        "illuminate/redis": "^10.0^11.0|^12.0",
-        "illuminate/config": "^10.0^11.0|^12.0"
+        "illuminate/filesystem": "^10.0|^11.0|^12.0",
+        "illuminate/support": "^10.0|^11.0|^12.0",
+        "illuminate/database": "^10.0|^11.0|^12.0",
+        "illuminate/redis": "^10.0|^11.0|^12.0",
+        "illuminate/config": "^10.0|^11.0|^12.0"
     },
     "autoload": {
         "psr-4": {
